@@ -1,3 +1,8 @@
+2003-02-17  Bruno Haible  <bruno@clisp.org>
+
+	* mkdtemp.h: New file, from GNU gettext.
+	* mkdtemp.c: New file, from GNU gettext.
+
 2003-01-31  Bruno Haible  <bruno@clisp.org>
 
 	* rename.c: #undef rename before defining rpl_rename.
