@@ -1,3 +1,8 @@
+2003-02-17  Bruno Haible  <bruno@clisp.org>
+
+	* modules/mkdtemp: New module.
+	* MODULES.html.sh (func_all_modules): Add it.
+
 2003-01-30  Bruno Haible  <bruno@clisp.org>
 
 	* modules/vasnprintf, modules/vasprintf: New modules.
